// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationManager.vue renders all meshes notification modal 1`] = `
<div
  aria-hidden="false"
  class="k-modal modal"
  data-v-2636d531=""
  role="dialog"
>
  <div
    class="modal-backdrop"
    data-v-2636d531=""
  >
    <div
      class="modal-dialog"
      data-v-2636d531=""
    >
      <div
        class="modal-content"
        data-v-2636d531=""
      >
        <div
          class="modal-header mb-4"
          data-v-2636d531=""
        >
          <div
            class="flex items-center"
            data-v-2636d531=""
          >
            <svg
              class="kong-icon mr-2 kong-icon-notificationBell"
              data-v-2636d531=""
              data-v-a7c9c1d2=""
              height="24"
              role="img"
              viewBox="0 0 16 18"
              width="24"
            >
              <title
                data-v-a7c9c1d2=""
              >
                notificationBell
              </title>
              <g
                data-v-a7c9c1d2=""
              >
                <path
                  class="bell-clapper"
                  d="M9.74999955 15h-4.5c-.207 0-.375.168-.375.375 0 1.4475 1.1775 2.625 2.625 2.625s2.62499995-1.1775 2.62499995-2.625c0-.207-.16799995-.375-.37499995-.375"
                  data-v-a7c9c1d2=""
                  fill="var(--yellow-300)"
                />
                <path
                  class="bell-body"
                  d="M13.4999995 11.25v-3c0-4.5-.93-5.21325-3.45225-6.24375C9.76649955.831 8.72774955 0 7.49999955 0c-1.209 0-2.268.84825-2.55 2.00625-2.52075 1.0305-3.45 1.84522492-3.45 6.24375v3c0 1.03425-1.49171255 1.1053638-1.49171255 2.25v.75h15.0009542v-.75c0-1.1029353-1.5092417-1.21575-1.5092417-2.25z"
                  data-v-a7c9c1d2=""
                  fill="var(--yellow-300)"
                />
              </g>
            </svg>
             All mesh notifications
      
          </div>
        </div>
        <!---->
        <div
          class="modal-body"
          data-v-2636d531=""
        >
          <div
            class="py-4"
            data-v-2636d531=""
          >
            <h3
              class="font-bold mb-4"
            >
              
    Meshes
  
            </h3>
             
            <p>
              
    We noticed that you have some available actions in your meshes.
  
            </p>
             
            <p>
              
    Below you can find meshes in which these actions are available.
  
            </p>
             
            <div
              class="pt-4"
            >
              <span
                class="relative"
              >
                <div
                  class="k-badge truncate ml-2 cursor-pointer transform hover:scale-110 kbadge-default"
                  data-v-07ccd633=""
                >
                  
        test-mesh
      
                </div>
                 
                <span
                  class="notification-amount"
                >
                  4
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="modal-footer"
          data-v-2636d531=""
        >
          <button
            class="k-button secondary"
            data-v-2636d531=""
            data-v-38fa8ecf=""
            type="button"
          >
            
        Close
      
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NotificationManager.vue renders single mesh notification modal 1`] = `
<div
  aria-hidden="false"
  class="k-modal modal"
  data-v-2636d531=""
  role="dialog"
>
  <div
    class="modal-backdrop"
    data-v-2636d531=""
  >
    <div
      class="modal-dialog"
      data-v-2636d531=""
    >
      <div
        class="modal-content"
        data-v-2636d531=""
      >
        <div
          class="modal-header mb-4"
          data-v-2636d531=""
        >
          <div
            data-v-2636d531=""
          >
            
        Here is a list of possible actions you might take to improve usability of your service mesh!

        
            <div
              class="k-badge truncate cursor-pointer kbadge-default"
              data-v-07ccd633=""
              data-v-2636d531=""
            >
              
          ‹ Back to all
        
            </div>
          </div>
        </div>
        <!---->
        <div
          class="modal-body"
          data-v-2636d531=""
        >
          <ul
            class="accordion"
            data-v-2636d531=""
          >
            <li
              class="relative border-b py-2"
            >
              <button
                class="accordion-item-header"
              >
                <div
                  class="flex items-center"
                >
                  <svg
                    class="kong-icon mr-4 kong-icon-warning"
                    data-v-a7c9c1d2=""
                    height="20"
                    role="img"
                    viewBox="0 0 48 42"
                    width="20"
                  >
                    <title
                      data-v-a7c9c1d2=""
                    >
                      warning
                    </title>
                    <g
                      data-v-a7c9c1d2=""
                    >
                      <path
                        d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                        data-v-a7c9c1d2=""
                        fill="var(--black-75)"
                        fill-rule="nonzero"
                        id="Triangle"
                        type="secondary"
                      />
                      <path
                        d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                        data-v-a7c9c1d2=""
                        fill="var(--yellow-300)"
                        fill-rule="nonzero"
                        id="Path"
                      />
                      <path
                        d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                        data-v-a7c9c1d2=""
                        fill="var(--black-75)"
                        id="!"
                        type="secondary"
                      />
                    </g>
                  </svg>
                   
                  <strong>
                    Observability, Metrics & Service Map
                  </strong>
                </div>
              </button>
               
              <transition-stub
                name="accordion"
              >
                <!---->
              </transition-stub>
            </li>
            <li
              class="relative border-b py-2"
            >
              <button
                class="accordion-item-header"
              >
                <div
                  class="flex items-center"
                >
                  <svg
                    class="kong-icon mr-4 kong-icon-warning"
                    data-v-a7c9c1d2=""
                    height="20"
                    role="img"
                    viewBox="0 0 48 42"
                    width="20"
                  >
                    <title
                      data-v-a7c9c1d2=""
                    >
                      warning
                    </title>
                    <g
                      data-v-a7c9c1d2=""
                    >
                      <path
                        d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                        data-v-a7c9c1d2=""
                        fill="var(--black-75)"
                        fill-rule="nonzero"
                        id="Triangle"
                        type="secondary"
                      />
                      <path
                        d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                        data-v-a7c9c1d2=""
                        fill="var(--yellow-300)"
                        fill-rule="nonzero"
                        id="Path"
                      />
                      <path
                        d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                        data-v-a7c9c1d2=""
                        fill="var(--black-75)"
                        id="!"
                        type="secondary"
                      />
                    </g>
                  </svg>
                   
                  <strong>
                    Logging
                  </strong>
                </div>
              </button>
               
              <transition-stub
                name="accordion"
              >
                <!---->
              </transition-stub>
            </li>
            <li
              class="relative border-b py-2"
            >
              <button
                class="accordion-item-header"
              >
                <div
                  class="flex items-center"
                >
                  <svg
                    class="kong-icon mr-4 kong-icon-warning"
                    data-v-a7c9c1d2=""
                    height="20"
                    role="img"
                    viewBox="0 0 48 42"
                    width="20"
                  >
                    <title
                      data-v-a7c9c1d2=""
                    >
                      warning
                    </title>
                    <g
                      data-v-a7c9c1d2=""
                    >
                      <path
                        d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                        data-v-a7c9c1d2=""
                        fill="var(--black-75)"
                        fill-rule="nonzero"
                        id="Triangle"
                        type="secondary"
                      />
                      <path
                        d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                        data-v-a7c9c1d2=""
                        fill="var(--yellow-300)"
                        fill-rule="nonzero"
                        id="Path"
                      />
                      <path
                        d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                        data-v-a7c9c1d2=""
                        fill="var(--black-75)"
                        id="!"
                        type="secondary"
                      />
                    </g>
                  </svg>
                   
                  <strong>
                    Zero-trust security
                  </strong>
                </div>
              </button>
               
              <transition-stub
                name="accordion"
              >
                <!---->
              </transition-stub>
            </li>
            <li
              class="relative border-b py-2"
            >
              <button
                class="accordion-item-header"
              >
                <div
                  class="flex items-center"
                >
                  <svg
                    class="kong-icon mr-4 kong-icon-warning"
                    data-v-a7c9c1d2=""
                    height="20"
                    role="img"
                    viewBox="0 0 48 42"
                    width="20"
                  >
                    <title
                      data-v-a7c9c1d2=""
                    >
                      warning
                    </title>
                    <g
                      data-v-a7c9c1d2=""
                    >
                      <path
                        d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                        data-v-a7c9c1d2=""
                        fill="var(--black-75)"
                        fill-rule="nonzero"
                        id="Triangle"
                        type="secondary"
                      />
                      <path
                        d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                        data-v-a7c9c1d2=""
                        fill="var(--yellow-300)"
                        fill-rule="nonzero"
                        id="Path"
                      />
                      <path
                        d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                        data-v-a7c9c1d2=""
                        fill="var(--black-75)"
                        id="!"
                        type="secondary"
                      />
                    </g>
                  </svg>
                   
                  <strong>
                    Tracing
                  </strong>
                </div>
              </button>
               
              <transition-stub
                name="accordion"
              >
                <!---->
              </transition-stub>
            </li>
          </ul>
        </div>
        <div
          class="modal-footer"
          data-v-2636d531=""
        >
          <button
            class="k-button secondary"
            data-v-2636d531=""
            data-v-38fa8ecf=""
            type="button"
          >
            
        Close
      
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NotificationManager.vue renders snapshot with information that there are actions which user may take 1`] = `
<div>
  <div>
    <div
      class="k-alert mb-4 info"
      data-testid="notification-info"
      data-v-14c8a976=""
      role="alert"
    >
      <button
        aria-label="Close"
        class="close"
        data-v-14c8a976=""
        type="button"
      >
        <svg
          class="kong-icon kong-icon-close"
          data-v-14c8a976=""
          data-v-7d3d19ac=""
          height="12"
          role="img"
          viewBox="0 0 12 12"
          width="12"
        >
          <title
            data-v-7d3d19ac=""
          >
            close
          </title>
          <g
            data-v-7d3d19ac=""
          >
            <path
              d="M0 1l1-1h.5L6 4.49993896 10.5 0h.5l1 1v.5L7.5 6l4.5 4.5v.5l-1 1h-.5L6 7.5 1.5 12H1l-1-1v-.5L4.5 6 0 1.5z"
              data-v-7d3d19ac=""
              fill="#000"
              fill-opacity=".25"
              fill-rule="evenodd"
            />
          </g>
        </svg>
      </button>
      <!---->
      <span
        data-v-14c8a976=""
      >
        <div
          class="mr-4"
          data-v-14c8a976=""
        >
          <span
            class="mr-2"
            data-v-14c8a976=""
          >
            <strong
              data-v-14c8a976=""
            >
              ProTip:
            </strong>
            
          We've detected that there are actions that you might take to adjust the way how you use service mesh.
        
          </span>
           
          <button
            class="k-button outline-primary"
            data-v-14c8a976=""
            data-v-38fa8ecf=""
            type="button"
          >
            
          Check!
        
          </button>
        </div>
      </span>
    </div>
     
    <!---->
  </div>
</div>
`;
